--- a/emceeSampling.ipynb
+++ b/emceeSampling.ipynb
@@ -53,12 +53,14 @@
     "#     p0[iwalk,2] = np.random.uniform(low=,high=)\n",
     "#     p0[iwalk,3] = np.random.uniform(low=,high=)\n",
     "#     p0[iwalk,4] = np.random.uniform(low=,high=)\n",
+    "#     p0[iwalk,5] = np.random.uniform(low=,high=)\n",
+    "#     p0[iwalk,6] = np.random.uniform(low=,high=)\n",
     "    \n",
     "# pstart = np.zeros(ndim)\n",
     "p0 = np.array(np.random.rand(ndim) for i in range(nwalk)) \n",
     "# p0 = np.array([ pstart+1.0e-4*np.random.normal(size=ndim) for iwalk in range(nwalk) ])\n",
     "    \n",
-    "sampler = emcee.EnsembleSampler(nwalk,ndim,lnprob)\n",
+    "sampler = emcee.EnsembleSampler(nwalk,ndim,lnprob) \n",
     "\n",
     "# burn-in run\n",
     "pos,prob,state = sampler.run_mcmc(p0,nburn)\n",
