Delete redundant functions

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -151,17 +151,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def poltocart(r, theta):\n",
-    "    x = r * np.cos(theta)\n",
-    "    y = r * np.sin(theta)\n",
-    "    return (x, y)\n",
-    "\n",
-    "def carttopol(x, y):\n",
-    "    r = np.sqrt(x**2 + y**2)\n",
-    "    theta = np.arctan(y, x)\n",
-    "    return (r, theta)\n",
-    "\n",
-    "\n",
     "def f(theta, eps, theta0): # defining f(θ)\n",
     "    return (1 - eps * np.cos(2 * (theta - theta0)))**(1/2)\n",
     "\n",
@@ -181,7 +170,7 @@
     "def calcsource(params, rtheta): # calculates the source given the ϕ-params and an image position\n",
     "    b, eps, gc, gs, theta0, _, _ = params\n",
     "    r, theta = rtheta\n",
-    "    x, y = poltocart(r, theta)\n",
+    "    x, y = pol2cart(r, theta)\n",
     "    mu = x - dxphi(rtheta, b, eps, gc, gs, theta0)\n",
     "    nu = y - dyphi(rtheta, b, eps, gc, gs, theta0)\n",
     "    return (mu, nu)\n",
@@ -223,7 +212,8 @@
     "# pstart = np.zeros(ndim)\n",
     "p0 = np.array(np.random.rand(ndim) for i in range(nwalk)) \n",
     "# p0 = np.array([ pstart+1.0e-4*np.random.normal(size=ndim) for iwalk in range(nwalk) ])\n",
-    "    \n",
+    "\n",
+    "\n",
     "sampler = emcee.EnsembleSampler(nwalk,ndim,lnprob) \n",
     "\n",
     "# burn-in run\n",
