--- a/Main.ipynb
+++ b/Main.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-22T14:51:58.414174Z",
-     "start_time": "2020-10-22T14:51:56.498052Z"
+     "end_time": "2020-10-22T20:05:04.432315Z",
+     "start_time": "2020-10-22T20:05:00.675868Z"
     }
    },
    "outputs": [],
@@ -16,6 +16,7 @@
     "from astropy.coordinates import SkyCoord\n",
     "import scipy as sp\n",
     "import matplotlib.pyplot as plt\n",
+    "from mpl_toolkits.axes_grid1 import make_axes_locatable\n",
     "import emcee\n",
     "import corner\n",
     "%matplotlib inline"
@@ -26,8 +27,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-22T14:51:58.429712Z",
-     "start_time": "2020-10-22T14:51:58.416169Z"
+     "end_time": "2020-10-22T20:05:04.448299Z",
+     "start_time": "2020-10-22T20:05:04.435304Z"
     },
     "cell_style": "center"
    },
@@ -86,8 +87,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-22T14:51:58.459634Z",
-     "start_time": "2020-10-22T14:51:58.434699Z"
+     "end_time": "2020-10-22T20:05:04.464226Z",
+     "start_time": "2020-10-22T20:05:04.451261Z"
     },
     "code_folding": []
    },
@@ -124,12 +125,104 @@
     "def lnprob(params, rthetasigma): # our χ^2 function\n",
     "    b, eps, gc, gs, theta0, u, v = params\n",
     "    r, theta, sigma = rthetasigma\n",
-    "    if b<0 or not 0<=eps<1 or not np.pi/2<=theta0<3*np.pi/2: return -np.inf\n",
+    "    if b<0 or not 0<=eps<1 or not 0<=theta0<2*np.pi: return -np.inf\n",
     "    chi2 = 0\n",
     "    for i in range(len(r)):\n",
     "        mu, nu = calcsource(params, (r[i], theta[i]))\n",
     "        chi2 += ((u - mu)**2 + (v - nu)**2) / sigma[i]**2\n",
     "    return -chi2 / 2 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-22T20:05:04.481180Z",
+     "start_time": "2020-10-22T20:05:04.466221Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def mcmc_model(data, nwalk=20, nburn=100000, nmain=200000, lensnum=None):\n",
+    "    ndim = 7\n",
+    "    \n",
+    "    # randomly generating starting points\n",
+    "    p0 = np.zeros((nwalk,ndim))\n",
+    "    for iwalk in range(nwalk):\n",
+    "        p0[iwalk,0] = np.random.uniform()\n",
+    "        p0[iwalk,1] = np.random.uniform()\n",
+    "        p0[iwalk,2] = np.random.uniform()\n",
+    "        p0[iwalk,3] = np.random.uniform()\n",
+    "        p0[iwalk,4] = np.random.uniform(low=0, high=2*np.pi)\n",
+    "        p0[iwalk,5] = np.random.uniform()\n",
+    "        p0[iwalk,6] = np.random.uniform()\n",
+    "\n",
+    "    sampler = emcee.EnsembleSampler(nwalk,ndim,lnprob, args=(data,)) \n",
+    "\n",
+    "    # burn-in run\n",
+    "    pos,prob,state = sampler.run_mcmc(p0,nburn)\n",
+    "    sampler.reset()\n",
+    "\n",
+    "    # main run\n",
+    "    res = sampler.run_mcmc(pos,nmain)\n",
+    "    samples = sampler.chain.reshape((-1,ndim))\n",
+    "    \n",
+    "    # creating the corner plot\n",
+    "    fig = corner.corner(samples,show_titles=True,labels=('b','ϵ','γc','γs','θ0','u','v'), title_fmt='.5f')\n",
+    "    params = samples[-1,:]\n",
+    "    fig.suptitle('Lens {0}; $\\chi^2 = {{{1:.3f}}}$'.format(lensnum, lnprob(params, data)), fontsize=22)\n",
+    "    \n",
+    "    return params, fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-22T20:05:04.496140Z",
+     "start_time": "2020-10-22T20:05:04.484172Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def plot_chi2(x, y, b, eps, gc, gs, theta0, u, v): # the chi^2 function for the contour plot\n",
+    "    rtheta = cart2pol(x,y)\n",
+    "    return (x - dxphi(rtheta, b, eps, gc, gs, theta0) - u)**2 + (y - dyphi(rtheta, b, eps, gc, gs, theta0) - v)**2\n",
+    "\n",
+    "def plot_model(data, params, sqrlim=None, lensnum=None):\n",
+    "    # handling inputs\n",
+    "    data = data[0:2].T\n",
+    "    xyimg = np.array(pol2cart(data[:,0], data[:,1]))\n",
+    "    b, eps, gc, gs, theta0, u, v = params\n",
+    "    \n",
+    "    # creating and evaluating points for the contour plot\n",
+    "    if sqrlim==None:\n",
+    "        sqrlim = max(xyimg.flatten(), key=lambda x:abs(x)) * 1.3\n",
+    "    levels = np.arange(-8, 0, 0.5)\n",
+    "    x = np.linspace(-sqrlim, sqrlim, 500)\n",
+    "    y = np.linspace(-sqrlim, sqrlim, 500)\n",
+    "    xx,yy = np.meshgrid(x,y)\n",
+    "    zz = plot_chi2(xx, yy, b, eps, gc, gs, theta0, u, v)\n",
+    "\n",
+    "    # plotting the contour plot and the images on top of it\n",
+    "    fig, ax = plt.subplots(figsize=(14,14))\n",
+    "    c = ax.contour(xx, yy, np.log10(zz), levels=levels, zorder=0)\n",
+    "    divider = make_axes_locatable(ax)\n",
+    "    cax = divider.append_axes(\"right\", size=\"5%\", pad=0.1)\n",
+    "    cb = plt.colorbar(c, cax=cax)\n",
+    "    ax.set_aspect('equal', adjustable='box')\n",
+    "    imgs = ax.scatter(xyimg[0], xyimg[1], color='k', marker=(5,1,0), s=300, zorder=1, label='Gilman et al. 2019')\n",
+    "    \n",
+    "    # beautification\n",
+    "    ax.legend(loc='upper right', fontsize=16)\n",
+    "    ax.set_xlabel('$x$', fontsize=22)\n",
+    "    ax.set_ylabel('$y$', fontsize=22)\n",
+    "    cb.set_label(r'$\\log ( \\, \\chi^2 = (x - \\Delta_x \\phi - u)^2 + (y - \\Delta_y \\phi - v)^2 \\, )$', fontsize=18)\n",
+    "    ax.set_title('Model and Observed Images; Lens {}'.format(lensnum), fontsize=22)\n",
+    "    \n",
+    "    return fig"
    ]
   },
   {
@@ -151,11 +244,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-22T14:51:58.475114Z",
-     "start_time": "2020-10-22T14:51:58.461627Z"
+     "end_time": "2020-10-22T20:05:04.526855Z",
+     "start_time": "2020-10-22T20:05:04.499133Z"
     },
     "scrolled": false
    },
@@ -213,209 +306,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-10-22T14:51:58.491061Z",
-     "start_time": "2020-10-22T14:51:58.477100Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "def mcmc_model(data, nwalk=20, nburn=50000, nmain=100000):\n",
-    "    ndim = 7\n",
-    "#     nwalk = 20\n",
-    "#     nburn = 100000\n",
-    "#     nmain = 500000\n",
-    "\n",
-    "    # might be better to use this segment if we have a better idea of what the low and high values might be for each parameter\n",
-    "    # generate random starting points\n",
-    "    p0 = np.zeros((nwalk,ndim))\n",
-    "    for iwalk in range(nwalk):\n",
-    "        p0[iwalk,0] = np.random.uniform()\n",
-    "        p0[iwalk,1] = np.random.uniform()\n",
-    "        p0[iwalk,2] = np.random.uniform()\n",
-    "        p0[iwalk,3] = np.random.uniform()\n",
-    "        p0[iwalk,4] = np.random.uniform(low=0, high=2*np.pi)\n",
-    "        p0[iwalk,5] = np.random.uniform(low=-0.1, high=0.1)\n",
-    "        p0[iwalk,6] = np.random.uniform(low=-0.1, high=0.1)\n",
-    "\n",
-    "#     pstart = np.zeros(ndim)\n",
-    "#     p0 = np.array([np.random.uniform(size=ndim) for i in range(nwalk)]) \n",
-    "#     p0 = np.array([ pstart+1.0e-4*np.random.normal(size=ndim) for iwalk in range(nwalk) ])\n",
-    "\n",
-    "\n",
-    "    sampler = emcee.EnsembleSampler(nwalk,ndim,lnprob, args=(data,)) \n",
-    "\n",
-    "#     burn-in run\n",
-    "    pos,prob,state = sampler.run_mcmc(p0,nburn)\n",
-    "    sampler.reset()\n",
-    "\n",
-    "#     pos = p0\n",
-    "\n",
-    "    # main run\n",
-    "    res = sampler.run_mcmc(pos,nmain)\n",
-    "    samples = sampler.chain.reshape((-1,ndim))\n",
-    "    fig = corner.corner(samples,show_titles=True,labels=('b','ϵ','γc','γs','θ0','u','v'), title_fmt='.5f')\n",
-    "    fig.show()\n",
-    "    return samples"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2020-10-22T14:51:56.520Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\python3_7_9\\lib\\site-packages\\emcee\\moves\\red_blue.py:99: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "  lnpdiff = f + nlp - state.log_prob[j]\n"
-     ]
-    }
-   ],
-   "source": [
-    "try:samples = mcmc_model(newData[3], nburn=50000, nmain=50000)\n",
-    "except: samples = mcmc_model(newData[3], nburn=50000, nmain=50000)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "start_time": "2020-10-22T14:51:56.522Z"
-    }
+     "start_time": "2020-10-22T20:05:00.688Z"
+    },
+    "scrolled": false
    },
    "outputs": [],
    "source": [
-    "lnprob(samples[-1,:], newData[3])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "start_time": "2020-10-22T14:51:56.524Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "def plot_chi2(x, y, b, eps, gc, gs, theta0, u, v):\n",
-    "    rtheta = cart2pol(x,y)\n",
-    "    return (x - dxphi(rtheta, b, eps, gc, gs, theta0) - u)**2 + (y - dyphi(rtheta, b, eps, gc, gs, theta0) - v)**2\n",
-    "\n",
-    "def plot_model(data, samples):\n",
-    "    data = data[0:2].T\n",
-    "    xyimg = pol2cart(data[:,0], data[:,1])\n",
-    "    b, eps, gc, gs, theta0, u, v = samples[-1,:]\n",
-    "    sqrlim = 1.5\n",
-    "    levels = np.arange(-8, 0, 0.5)\n",
-    "    x = np.linspace(-sqrlim, sqrlim, 500)\n",
-    "    y = np.linspace(-sqrlim, sqrlim, 500)\n",
-    "    xx,yy = np.meshgrid(x,y)\n",
-    "    zz = plot_chi2(xx, yy, b, eps, gc, gs, theta0, u, v)\n",
-    "\n",
-    "    imgfig, ax = plt.subplots(figsize=(14,14))\n",
-    "    c = ax.contour(xx, yy, np.log10(zz), levels=levels, zorder=0)\n",
-    "    cb = plt.colorbar(c, ax=ax)\n",
-    "    ax.set_aspect('equal', adjustable='box')\n",
-    "    imgs = ax.scatter(xyimg[0], xyimg[1], color='k', marker=(5,1,0), s=300, zorder=1)\n",
+    "for i in range(8)[-1:]:\n",
+    "    try: params, corfig = mcmc_model(newData[i], lensnum=i)\n",
+    "    except: params, corfig = mcmc_model(newData[i], lensnum=i)\n",
+    "    plt.savefig('plots/corner_{}.png'.format(i), format='png', dpi=300)\n",
+    "    plt.show()\n",
+    "    \n",
+    "    contfig = plot_model(newData[i], params, lensnum=i)\n",
+    "    plt.savefig('plots/contour_{}.png'.format(i), format='png', dpi=300)\n",
     "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "start_time": "2020-10-22T14:51:56.526Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "plot_model(data = newData[3], samples=samples)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-10-19T14:31:56.961781Z",
-     "start_time": "2020-10-19T14:31:56.945814Z"
-    }
-   },
-   "source": [
-    "## debugging using the roots practical as test data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "start_time": "2020-10-22T14:51:56.528Z"
-    },
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "# # creating rthetasigma\n",
-    "# imgxy = np.array([[-7.728e-01,+2.924e-04], [+1.045e+00,+1.135e-05], [+7.500e-01,+8.199e-01], [+7.500e-01,-8.199e-01]])\n",
-    "# print(imgxy)\n",
-    "# imgrth = np.array(cart2pol(imgxy[:,0], imgxy[:,1]))\n",
-    "# print(imgrth)\n",
-    "# imgrthsgm = np.concatenate((imgrth, [np.ones(4)]))\n",
-    "# print(imgrthsgm)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "start_time": "2020-10-22T14:51:56.529Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# try: samples = mcmc_model(imgrthsgm, nburn=5000, nmain=10000)\n",
-    "# except: samples = mcmc_model(imgrthsgm, nburn=5000, nmain=10000)\n",
-    "# fig = corner.corner(samples,show_titles=True,labels=('b','ϵ','γc','γs','θ0','u','v'), title_fmt='.5f')\n",
-    "# fig.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "start_time": "2020-10-22T14:51:56.531Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# lnprob(samples[-1,:], imgrthsgm)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "start_time": "2020-10-22T14:51:56.532Z"
-    },
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "# plot_model(imgrthsgm, samples)"
    ]
   }
  ],
